--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/core": "^5.14.0",
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
@@ -22,9 +24,10 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.10.1",
     "react-native": "~0.63.3",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.10.1",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.11.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
